--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,41 @@
+
+
 /* Give your page a fun background color */
+
+body {
+    background-color:  #A6D0DD;
+}
 
 /* Make the header and footer a different color from the background */
 
-/* Align the h1 containing your name in the center of the header*/
+footer {
+    background-color:  #FFEEAD;
+}
+header {
+    background-color: #FFEEAD;
+}
 
+
+/* Align the h1 containing your name in the center of the header*/
+h1 {
+    text-align: center;
+}
 /* Make your p tag a different color and italic */
+p {
+    color: #D9534F;
+    font-style: italic;
+}
 
 /* Put a border around your image */
-
+img {
+    border: black;
+    border-style:groove;
+    object-position: center;
+}
 /* Change the font-family of your list */
+ol {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+li {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
