--- a/assignment/style.css
+++ b/assignment/style.css
@@ -26,8 +26,13 @@ p {
 /* Put a border around your image */
 img {
     border: black;
+    background-color: #FFEEAD;
     border-style:groove;
-    object-position: center;
+    border-radius: 25%;
+    width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 /* Change the font-family of your list */
 ol {
