Update to HTML Text and CSS styling

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -9,9 +9,13 @@ body {
 /* Make the header and footer a different color from the background */
 footer {
     background-color:  #FFEEAD;
+    text-align: center;
+    border-radius: 75%;
 }
 header {
     background-color: #FFEEAD;
+    color: #D9534F;
+    border-radius: 75%;
 }
 /* Align the h1 containing your name in the center of the header*/
 h1 {
@@ -37,7 +41,13 @@ img {
 /* Change the font-family of your list */
 ol {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    padding-left: 25%;
+    padding-right: 25%;
+    color: #D9534F;
+    
 }
 li {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
